@@ -1,23 +1,31 @@
 package com.censodev.minidrive.data.domains;
 
-import censodev.lib.auth.utils.jwt.Credentials;
+import io.github.censodev.jwtprovider.CanAuth;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
-import lombok.Data;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
 
-import javax.persistence.*;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 @Entity
-@Table
-@Data
+@Table(name = "users")
+@Getter
+@Setter
+@ToString
 @Builder(toBuilder = true)
 @NoArgsConstructor
 @AllArgsConstructor
-public class User implements Credentials {
+public class User implements CanAuth {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
@@ -26,17 +34,12 @@ public class User implements Credentials {
     private String fullName;
 
     @Override
-    public Object getSubject() {
+    public Object subject() {
         return id;
     }
 
     @Override
-    public String getUsername() {
-        return username;
-    }
-
-    @Override
-    public List<String> getAuthorities() {
-        return new ArrayList<>(Collections.singletonList("ROLE_USER"));
+    public Collection<String> authorities() {
+        return new ArrayList<>(List.of("ROLE_USER"));
     }
 }
